--- a/knife_catching.ipynb
+++ b/knife_catching.ipynb
@@ -92,7 +92,7 @@
     "    except:\n",
     "        pass\n",
     "    \n",
-    "    #ma_velocity grid is hard coded to a single val to prevent lengthy run val. Uncomment second line to iter through grid.\n",
+    "    #ma_velocity grid is hard coded to a single val to prevent lengthy run time. Uncomment second line to iter through grid.\n",
     "    ma_velocity_grid = [1.0001301155064284]\n",
     "    #ma_velocity_grid = np.arange(1.00, max(velocity_ratio_list), (max(velocity_ratio_list) - 1.00) / 10)\n",
     "    for ma_velocity in ma_velocity_grid:\n",
