--- a/price_volume_delta.ipynb
+++ b/price_volume_delta.ipynb
@@ -9,7 +9,7 @@
     "#Thesis for this strategy: Whenever there is significant price movement without the expected increase in volume...\n",
     "##...the market was not efficient in the move and mean reversion is likely.\n",
     "\n",
-    "#Strategy flow: Conditioned on trend of long MA; Buy next open whenever there is a significant red candle... \n",
+    "#Strategy flow: Conditioned on trend of long MA; Enter long position whenever price delta / volume delta surpasses defined significance level... \n",
     "##...set equal TP and SL targets."
    ]
   },
