--- a/price_volume_delta.ipynb
+++ b/price_volume_delta.ipynb
@@ -10,7 +10,7 @@
     "##...the market was not efficient in the move and mean reversion is likely.\n",
     "\n",
     "#Strategy flow: Conditioned on trend of long MA; Enter long position whenever price delta / volume delta surpasses defined \n#significance level... \n",
-    "##...set equal TP and SL targets."
+    "##...No alpha expected in TP SL exit levels...test arbitrary vars and R/R ratios."
    ]
   },
   {
